<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sign Language Recognition</string>
    <string name="start_capture">Start Recording</string>
    <string name="stop_capture">Stop Recording</string>
    <string name="predict">Start Prediction</string>
    <string name="prediction_placeholder">Start prediction to collect 30 feature vectors of size 1662</string>
    <string name="clear_frames">Clear Frame Buffer</string>
    <string name="select_video">Select Video File</string>
</resources>
